# snowflake-sql-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: authentication.md  cli.md  getting-started.md  testing.md  troubleshooting.md
scripts/: benchmark.py
snowflake_sql_api/: __init__.py  aclient.py  auth.py  bindings.py  cli.py  client.py  escaping.py  exceptions.py  pagination.py  retry.py  row_mapping.py  testing.py  transport.py  types.py
tests/: conftest.py  support.py  test_aclient.py  test_auth.py  test_bindings.py  test_cli.py  test_client.py  test_escaping.py  test_import_footprint.py  test_package.py  test_regression.py  test_retry.py  test_testing.py  test_transport.py  test_types.py
tests/smoke/: test_smoke.py
